crear intento de landing page

--- a/src/mocks/index.html
+++ b/src/mocks/index.html
@@ -1,4 +1,4 @@
-const htmlPage = `<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -28,6 +28,8 @@ const htmlPage = `<!DOCTYPE html>
         <span class="punto">.</span><span class="function">then</span>(response <span class="arrow">=></span> response.<span>json()</span>)
         <br>
           <span class="punto">.</span><span class="function">then</span>(json <span class="arrow">=></span>console.<span class="function">json</span>(json))
+        <br>
+        <br>
       </p>
     </section>
   </article>
@@ -43,7 +45,7 @@ const htmlPage = `<!DOCTYPE html>
   </article>
   <footer>
     <h3>Esta API fue diseñada para facilitar el acceso a la información de la Liga Universitaria</h3>
-    <p>Dentro de su propósito jamás está sustituir la página original y mucho menos hacerle competencia.</p>
+    <p>Dentro de su propósito jamás está sustituir la página original ni hacerle competencia a esta.</p>
   </footer>
   <style>
     * {
@@ -125,8 +127,4 @@ const htmlPage = `<!DOCTYPE html>
     }
   </style>
 </body>
-</html>`
-
-module.exports = {
-  htmlPage
-}
+</html>
